--- a/src/overlay/pub/levelRange.html
+++ b/src/overlay/pub/levelRange.html
@@ -7,6 +7,7 @@
         display: flex;
         flex-direction: column;
         height: 32em;
+        overflow: hidden;
         padding: 0.5em;
         width: 200px;
       }
