--- a/src/overlay/pub/levelInfo.html
+++ b/src/overlay/pub/levelInfo.html
@@ -21,12 +21,12 @@
         justify-content: center;
         padding: .25em .5em .25em .5em;
       }
-      .level-name {
+      .item-name {
         color: #7fff7f;
         font-size: 1.25em;
         line-height: 1.2em;
       }
-      .level-id {
+      .item-id {
         color: #4f7f4f;
         font-size: .75em;
       }
@@ -42,34 +42,41 @@
     <div class="container">
       <span class="title"></span>
       <div class="level-info">
-        <span class="level-name"></span>
-        <span class="level-id"></span>
+        <span class="item-name"></span>
+        <span class="item-id"></span>
       </div>
       <span class="submitted-by"></span>
     </div>
     <script language="javascript" type="text/javascript">
       const params = new URLSearchParams(window.location.search);
       const model = {
+        type: "",
         title: "",
-        levelName: "",
-        levelId: "",
+        name: "",
+        id: "",
         submittedBy: ""
       };
       const updateView = () => {
-        document.getElementsByClassName("level-id")[0].innerHTML = model.levelId;
-        document.getElementsByClassName("level-name")[0].innerHTML = model.levelName;
+        const containerEl = document.getElementsByClassName("container")[0];
+        containerEl.classList.remove("level", "creator", "marker");
+        if (model.type) {
+          containerEl.classList.add(model.type);
+        }
+        document.getElementsByClassName("item-id")[0].innerHTML = model.id;
+        document.getElementsByClassName("item-name")[0].innerHTML = model.name;
         if (model.submittedBy && model.submittedBy.trim().length) {
           document.getElementsByClassName("submitted-by")[0].innerHTML = `Submitted by ${model.submittedBy}`;
         } else {
-          document.getElementsByClassName("submitted-by")[0].innerHTML = '&nbsp;';
+          document.getElementsByClassName("submitted-by")[0].innerHTML = "&nbsp;";
         }
       };
 
       (() => {
         if (params.get("demo") === "true") {
           model.title = "Now Playing";
-          model.levelName = "Blopfush Race";
-          model.levelId = "kbt89w5";
+          model.type = "level";
+          model.name = "Blopfush Race";
+          model.id = "kbt89w5";
           model.submittedBy = "madelsberger";
           updateView();
         } else {
@@ -81,15 +88,25 @@
           const ws = new WebSocket(`ws://${window.location.host}/levels`);
           ws.onmessage = m => {
             const queue = JSON.parse(m.data);
-            const entry = ((params.get("skip_mark") === "true") ? queue.filter(e => e.type === "level") : queue)[parseInt(params.get("position"), 10) - 1];
-            if (entry && entry.type === 'level') {
-              model.levelName = entry.level.levelName;
-              model.levelId = entry.level.levelId;
-              model.submittedBy = entry.level.submittedBy;
-            } else {
-              model.levelName = '';
-              model.levelId = '';
-              model.submittedBy = '';
+            const item = ((params.get("skip_mark") === "true") ? queue.filter(e => e.type === "level") : queue)[parseInt(params.get("position"), 10) - 1];
+            model.name = "";
+            model.id = "";
+            model.submittedBy = "";
+            model.type = "";
+            if (item) {
+              model.type = item.type === "mark" ? "marker" : model.type;
+              switch (item.type) {
+                case "level":
+                  model.name = item.entry.name;
+                  model.id = item.entry.id;
+                  model.submittedBy = item.entry.submittedBy;
+                  break;
+                case "creator":
+                  model.name = `Level from ${item.entry.name}`;
+                  model.id = `@${item.entry.id}`;
+                  model.submittedBy = item.entry.submittedBy;
+                  break;
+              }
             }
             updateView();
           };
