--- a/src/web/pub/overlay/index.html
+++ b/src/web/pub/overlay/index.html
@@ -222,7 +222,7 @@
 
     <script language="javascript" type="text/javascript">
       for (const span of document.getElementsByClassName("baseUrl")) {
-        span.innerHTML = document.location.origin;
+        span.innerHTML = `${document.location.origin}/overlay`;
       }
     </script>
   </body>
